@@ -70,7 +70,7 @@ Apple HTTP Live Streaming demuxer.
 
 This demuxer presents all AVStreams from all variant streams.
 The id field is set to the bitrate variant index number. By setting
-the discard flags on AVStreams (by pressing 'a' or 'v' in ffplay),
+the discard flags on AVStreams (by pressing 'a' or 'v' in avplay),
 the caller can decide which variant streams to actually receive.
 The total bitrate of the variant that the stream belongs to is
 available in a metadata key named "variant_bitrate".
